Remove node_modules from Git tracking

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "node seeddata.js",
-    "unseed": "node seeddata.js -d"
+    "unseed": "node seeddata.js -d",
+    "server": "node server.js"
   },
   "keywords": [],
   "author": "",
